--- a/kyrenflowweb1.html
+++ b/kyrenflowweb1.html
@@ -576,11 +576,11 @@
                 <div class="hero-visual">
                     <div class="hero-stats">
                         <div class="stat-card">
-                            <span class="stat-number">50M+</span>
+                            <span class="stat-number">5K+</span>
                             <span class="stat-label">Target Beneficiaries</span>
                         </div>
                         <div class="stat-card">
-                            <span class="stat-number">₹100Cr</span>
+                            <span class="stat-number">₹10Lakh+</span>
                             <span class="stat-label">Capital Deployment Target</span>
                         </div>
                         <div class="stat-card">
@@ -754,6 +754,8 @@
                     <a href="#">Leadership Team</a>
                     <a href="#">Investor Relations</a>
                     <a href="#">Careers</a>
+                     <a href="#">CONTACT:kyrentech@gmail.com</a>
+                      <a href="#">CONTACT:kyrentech@outlook.com</a>
                 </div>
             </div>
             <div class="footer-bottom">
