Update: Add analytical model and update navigation for credit score analysis

--- a/index.html
+++ b/index.html
@@ -549,6 +549,7 @@
                 <li><a href="#platform">Platform</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#insights">Insights</a></li>
+                <li><a href="analytical.html">Analysis</a></li>
             </ul>
             <a href="#contact" class="cta-nav">Get Started</a>
         </nav>
