Update: Add navigation link to return to home page in analytical model

--- a/analytical.html
+++ b/analytical.html
@@ -22,6 +22,7 @@
 </head>
 <body>
     <div class="container">
+        <a href="index.html" style="display:inline-block;margin-bottom:2rem;padding:0.7rem 1.5rem;background:#60a5fa;color:#0f1419;font-weight:600;border-radius:6px;text-decoration:none;transition:background 0.3s;box-shadow:0 2px 8px rgba(96,165,250,0.08);text-align:center;">← Back to Home</a>
         <h1>Business Credit Score Analyzer</h1>
         <div class="section-header">
             <p>Input your business and personal details to get an instant credit score estimate and analysis.<br>Our model considers age, income, business type, education, region, and collateral for a holistic assessment.</p>
